--- a/budget_run2/web/resources/css/loginStyle.css
+++ b/budget_run2/web/resources/css/loginStyle.css
@@ -99,25 +99,27 @@ and open the template in the editor.
 
 
 .menu-card {
-    margin-top: 20px;
+    
     padding: 30px;
     height: 180px;
     width: 250px;
     
-    background-image: url("../../resources/img/url.png");
+    
+    background-image: url("../../resources/img/url_1.png");
 
     border-radius: 2px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     
     background-repeat:no-repeat;
+    background-repeat: round;
     
    
 }
 
 .menu-card:hover {
     text-shadow: 0 1px rgba(0,0,0,0.3);
-    background-color: #e7e7e7;
+    background-color: #e0e0e0;
     
     color:#666;
     background-position:0 0, 0 0;
@@ -138,7 +140,7 @@ a:hover{
 
 .menu-link {
     text-decoration: none;
-    color: #333;
+    color: #fff;
 }
 
 .iconMenu {
@@ -149,4 +151,7 @@ a:hover{
     margin-left: 10%;
     position: absolute;
     top: 150px;
+}
+.col-md-3{
+    margin:20px;
 }
